syntax = "proto3";

package com.softwaremill.test.domain;

import "akkaserverless/annotations.proto";

option java_outer_classname = "UsersDomain";

// events

message UserCreated {
  string email = 1;
  string password_salt = 2;
  string password_hash = 3;
}